--- a/index.html
+++ b/index.html
@@ -387,6 +387,29 @@
                 <h2>CONTACT US</h2>
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
             </div>
+
+            <div class="content">
+                <form action="">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" placeholder="Your Email">
+                    <textarea type="text" placeholder="Your Message"></textarea>
+                    <button>Send Message</button>
+                </form>
+                <div class="text">
+                    <div class="text1">
+                        <h3>Get in touch</h3>
+                        <p>+00 123.456.789 <br> +00 123.456.789</p>
+                    </div>
+                    <div class="text2">
+                        <h3>WHERE WE ARE</h3>
+                        <p>Awesome Address 17 <br>
+                            New York, NYC <br>
+                            123-4567-890 <br>
+                            USA
+                        </p>
+                    </div>                    
+                </div>
+            </div>
         </div>
     </div>
 </body>
