--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="form">
                     <i class="fas fa-search"></i>
@@ -381,7 +381,7 @@
         </div>
     </div>
 
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="container">
             <div class="section-title">
                 <h2>CONTACT US</h2>
@@ -412,5 +412,18 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <img src="./img/logo.png" alt="">
+            <h1>We are social</h1>
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-telegram"></i>
+            </div>
+            <p>@2022 <span>Kasper</span> All Right Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
